--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Main Page</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
-    <!-- Header -->
+    <!-- Header section -->
     <header>
       <!-- navigation menu -->
       <nav>
@@ -39,14 +39,14 @@
     </header>
     <!-- main container -->
     <main>
-      <!-- section1 -->
+      <!-- Hero section -->
       <section>
         <!-- head -->
         <h1>Effective Solutions for Your Business</h1>
         <!-- button -->
         <button type="button">Order Service</button>
       </section>
-      <!-- section2 -->
+      <!--  section1 -->
       <section>
         <h2 hidden>features</h2>
         <ul>
@@ -80,7 +80,7 @@
           </li>
         </ul>
       </section>
-      <!-- section3 -->
+      <!-- section2 -->
       <section>
         <h2>What are we doing</h2>
         <ul>
@@ -122,7 +122,7 @@
         </ul>
       </section>
     </main>
-    <!-- footer -->
+    <!-- footer section-->
     <footer>
       <!-- logo -->
       <a href="./index.html">WebStudio</a>
