update index.htm + portfolio.html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         </ul>
       </address>
     </header>
+
     <!-- main container -->
     <main>
       <!-- Hero section -->
@@ -46,6 +47,7 @@
         <!-- button -->
         <button type="button">Order Service</button>
       </section>
+
       <!--  section1 -->
       <section>
         <h2 hidden>features</h2>
@@ -80,48 +82,51 @@
           </li>
         </ul>
       </section>
+
       <!-- section2 -->
       <section>
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/img1.jpg" alt="monitor" width="360" />
+            <img src="./images/main/section2/img1.jpg" alt="monitor" width="360" />
           </li>
           <li>
-            <img src="./images/img2.jpg" alt="whatsapp" width="360" />
+            <img src="./images/main/section2/img2.jpg" alt="whatsapp" width="360" />
           </li>
           <li>
-            <img src="./images/img3.jpg" alt="mobile" width="360" />
+            <img src="./images/main/section2/img3.jpg" alt="mobile" width="360" />
           </li>
         </ul>
       </section>
+
       <!-- section3 -->
       <section>
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/Mark.jpg" alt="Mark" width="264" />
+            <img src="./images/main/section3/Mark.jpg" alt="Mark" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/Tom.jpg" alt="Tom" width="264" />
+            <img src="./images/main/section3/Tom.jpg" alt="Tom" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/Camilla.jpg" alt="Camilla" width="264" />
+            <img src="./images/main/section3/Camilla.jpg" alt="Camilla" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/Daniel.jpg" alt="Daniel" width="264" />
+            <img src="/images/main/section3/Daniel.jpg" alt="Daniel" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+
     <!-- footer section-->
     <footer>
       <!-- logo -->
