--- a/portfolio.html
+++ b/portfolio.html
@@ -55,28 +55,87 @@
           <button type="button">Marketing</button>
         </li>
       </ul>
-      <img src="./images/group.jpg" alt="указатель мыши" width="13" />
-      <!-- row 1 -->
+      <img src="./images/portfolio/group.jpg" alt="Mouse pointer" width="13" />
+
+      <!-- row 1 section-->
       <section>
         <ul>
           <li>
-            <img src="./images/banking-app.jpg" alt="Banking App Interface Concept" width="369" />
+            <img
+              src="./images/portfolio/row1/banking-app.jpg"
+              alt="Banking App Interface Concept"
+              width="369"
+            />
             <h3>Banking App Interface Concept</h3>
             <p>App</p>
           </li>
           <li>
-            <img src="./images/cashles-payment.jpg" alt="Cashless Payment" width="360" />
+            <img
+              src="./images/portfolio/row1/cashles-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/meditacion-app.jpg" alt="Meditation App" width="360" />
+            <img
+              src="./images/portfolio/row1/meditacion-app.jpg"
+              alt="Meditation App"
+              width="360"
+            />
             <h3>Meditation App</h3>
             <p>App</p>
           </li>
         </ul>
       </section>
+
+      <!-- row2 section -->
+      <sectin>
+        <ul>
+          <li>
+            <img src="./images/portfolio/row2/taxi-service.jpg" alt="Taxi Service" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio/row2/screen-illustrations.jpg"
+              alt="Screen Illustrations"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/row2/online-courses.jpg" alt="Online Courses" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </sectin>
+
+      <!-- row3 section -->
+      <section>
+        <ul>
+          <li>
+            <img src="./images/portfolio/row3/instagram.jpg" alt="Instagram Stories Concept" />
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/row3/organic-food.jpg" alt="Organic Food" />
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/row3/fresh-coffee.jpg" alt="Fresh Coffee" />
+            <h3>Fresh Coffee</h3>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
+
     <!-- footer -->
     <footer>
       <!-- logo -->
