--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Header -->
@@ -15,7 +25,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li>
-            <a href="">Studio</a>
+            <a href="./index.html">Studio</a>
           </li>
           <li>
             <a href="./portfolio.html">Portfolio</a>
@@ -91,10 +101,10 @@
       </section>
 
       <!-- row2 section -->
-      <sectin>
+      <section>
         <ul>
           <li>
-            <img src="./images/portfolio/row2/taxi-service.jpg" alt="Taxi Service" />
+            <img src="./images/portfolio/row2/taxi-service.jpg" alt="Taxi Service" width="360" />
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </li>
@@ -102,33 +112,42 @@
             <img
               src="./images/portfolio/row2/screen-illustrations.jpg"
               alt="Screen Illustrations"
+              width="360"
             />
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/portfolio/row2/online-courses.jpg" alt="Online Courses" />
+            <img
+              src="./images/portfolio/row2/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </li>
         </ul>
-      </sectin>
+      </section>
 
       <!-- row3 section -->
       <section>
         <ul>
           <li>
-            <img src="./images/portfolio/row3/instagram.jpg" alt="Instagram Stories Concept" />
+            <img
+              src="./images/portfolio/row3/instagram.jpg"
+              alt="Instagram Stories Concept"
+              width="360"
+            />
             <h3>Instagram Stories Concept</h3>
             <p>Design</p>
           </li>
           <li>
-            <img src="./images/portfolio/row3/organic-food.jpg" alt="Organic Food" />
+            <img src="./images/portfolio/row3/organic-food.jpg" alt="Organic Food" width="360" />
             <h3>Organic Food</h3>
             <p>Web Site</p>
           </li>
           <li>
-            <img src="./images/portfolio/row3/fresh-coffee.jpg" alt="Fresh Coffee" />
+            <img src="./images/portfolio/row3/fresh-coffee.jpg" alt="Fresh Coffee" width="360" />
             <h3>Fresh Coffee</h3>
             <p>Web Site</p>
           </li>
