--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/images/main/section3/Daniel.jpg" alt="Daniel" width="264" />
+            <img src="./images/main/section3/Daniel.jpg" alt="Daniel" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
