--- a/index.html
+++ b/index.html
@@ -9,37 +9,39 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header section -->
     <header>
       <!-- navigation menu -->
-      <nav>
+      <nav class="test">
         <!-- Logo -->
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
+        <a href="./index.html" class="logo"">
+          <span class="logo-first">Web</span>
+          Studio</a
+        >
+        <ul class="test">
+          <li >
             <a href="">Studio</a>
           </li>
-          <li>
+          <li >
             <a href="./portfolio.html">Portfolio</a>
           </li>
-          <li>
+          <li >
             <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- adress -->
-      <address>
+      <address class="test">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li ><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li ><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -47,7 +49,8 @@
     <!-- main container -->
     <main>
       <!-- Hero section -->
-      <section>
+      <section class="hero">
+        <img src="./images/Dark-bg.jpg" alt="dark-bg" width="1440" height="600">
         <!-- head -->
         <h1>Effective Solutions for Your Business</h1>
         <!-- button -->
