add styles for main pages in header

--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
     <!-- Header section -->
     <header>
       <!-- navigation menu -->
-      <nav class="test">
+      <nav" class="list">
         <!-- Logo -->
         <a href="./index.html" class="logo"">
-          <span class="logo-first">Web</span>
-          Studio</a
+          Web
+          <span class="logo-item">Studio</span></a
         >
-        <ul class="test">
-          <li >
-            <a href="">Studio</a>
+        <ul>
+          <li class="list-menu" >
+            <a href="./index.html" class="link">Studio</a>
           </li>
-          <li >
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="list-menu">
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
-          <li >
-            <a href="">Contacts</a>
+          <li class="list-menu">
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- adress -->
-      <address class="test">
+      <address class="address">
         <ul>
-          <li ><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="address-mail"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
           <li ><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
