--- a/portfolio.html
+++ b/portfolio.html
@@ -19,28 +19,31 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
+   <header>
       <!-- navigation menu -->
-      <nav>
+      <nav" class="list">
         <!-- Logo -->
-        <a href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"">
+          Web
+          <span class="logo-item">Studio</span></a
+        >
         <ul>
-          <li>
-            <a href="./index.html">Studio</a>
+          <li class="list-menu" >
+            <a href="./index.html" class="link">Studio</a>
           </li>
-          <li>
-            <a href="./portfolio.html">Portfolio</a>
+          <li class="list-menu">
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="list-menu">
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- adress -->
-      <address>
+      <address class="address">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="address-mail"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li ><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
