add css styles for header and footer

--- a/index.html
+++ b/index.html
@@ -5,43 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!-- Header section -->
     <header>
       <!-- navigation menu -->
-      <nav" class="list">
+      <nav class="nav">
         <!-- Logo -->
-        <a href="./index.html" class="logo"">
+        <a href="./index.html" class="link nav-logo">
           Web
-          <span class="logo-item">Studio</span></a
+          <span class="nav-logo-item">Studio</span></a
         >
-        <ul>
-          <li class="list-menu" >
+        <ul class="list">
+          <li>
             <a href="./index.html" class="link">Studio</a>
           </li>
-          <li class="list-menu">
+          <li>
             <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
-          <li class="list-menu">
+          <li>
             <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- adress -->
       <address class="address">
-        <ul>
-          <li class="address-mail"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li ><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -49,8 +54,8 @@
     <!-- main container -->
     <main>
       <!-- Hero section -->
-      <section class="hero">
-        <img src="./images/Dark-bg.jpg" alt="dark-bg" width="1440" height="600">
+      <section>
+        <img src="./images/Dark-bg.jpg" alt="dark-bg" width="1440" height="600" />
         <!-- head -->
         <h1>Effective Solutions for Your Business</h1>
         <!-- button -->
@@ -137,10 +142,13 @@
     </main>
 
     <!-- footer section-->
-    <footer>
+    <footer class="footer">
       <!-- logo -->
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="link footer-logo">
+        Web
+        <span class="footer-logo-item">Studio</span></a
+      >
+      <p class="text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
