--- a/portfolio.html
+++ b/portfolio.html
@@ -5,45 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
-   <header>
+    <header>
       <!-- navigation menu -->
-      <nav" class="list">
+      <nav>
         <!-- Logo -->
-        <a href="./index.html" class="logo"">
+        <a href="./index.html">
           Web
-          <span class="logo-item">Studio</span></a
+          <span>Studio</span></a
         >
         <ul>
-          <li class="list-menu" >
-            <a href="./index.html" class="link">Studio</a>
+          <li>
+            <a href="./index.html">Studio</a>
           </li>
-          <li class="list-menu">
-            <a href="./portfolio.html" class="link">Portfolio</a>
+          <li>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="list-menu">
-            <a href="" class="link">Contacts</a>
+          <li>
+            <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- adress -->
-      <address class="address">
+      <address>
         <ul>
-          <li class="address-mail"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li ><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
