--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
       <!-- adress -->
       <address class="address">
         <ul class="list">
-          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111" class="link">+11 (000) 111-11-11</a></li>
+          <li>
+            <a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -55,7 +57,6 @@
     <main>
       <!-- Hero section -->
       <section>
-        <img src="./images/Dark-bg.jpg" alt="dark-bg" width="1440" height="600" />
         <!-- head -->
         <h1>Effective Solutions for Your Business</h1>
         <!-- button -->
