--- a/index.html
+++ b/index.html
@@ -56,41 +56,41 @@
     <!-- main container -->
     <main>
       <!-- Hero section -->
-      <section>
+      <section class="hero">
         <!-- head -->
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="head">Effective Solutions for Your Business</h1>
         <!-- button -->
-        <button type="button">Order Service</button>
+        <button type="button" class="btn">Order Service</button>
       </section>
 
-      <!--  section1 -->
+      <!--  features section -->
       <section>
-        <h2 hidden>features</h2>
-        <ul>
+        <h2 hidden class="head-section">features</h2>
+        <ul class="list features">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="features-head">Strategy</h3>
+            <p class="features-paragraf">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="features-head">Punctuality</h3>
+            <p class="features-paragraf">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="features-head">Diligence</h3>
+            <p class="features-paragraf">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="features-head">Technologies</h3>
+            <p class="features-paragraf">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -98,10 +98,10 @@
         </ul>
       </section>
 
-      <!-- section2 -->
+      <!-- product section -->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img src="./images/main/section2/img1.jpg" alt="monitor" width="360" />
           </li>
@@ -114,29 +114,29 @@
         </ul>
       </section>
 
-      <!-- section3 -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <!-- team section -->
+      <section class="team">
+        <h2 class="title">Our Team</h2>
+        <ul class="list">
+          <li class="team-item">
             <img src="./images/main/section3/Mark.jpg" alt="Mark" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Mark Guerrero</h3>
+            <p class="team-posicion">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/main/section3/Tom.jpg" alt="Tom" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Tom Ford</h3>
+            <p class="team-posicion">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/main/section3/Camilla.jpg" alt="Camilla" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Camila Garcia</h3>
+            <p class="team-posicion">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img src="./images/main/section3/Daniel.jpg" alt="Daniel" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Daniel Wilson</h3>
+            <p class="team-posicion">UI Designer</p>
           </li>
         </ul>
       </section>
