--- a/portfolio.html
+++ b/portfolio.html
@@ -23,31 +23,31 @@
     <!-- Header -->
     <header>
       <!-- navigation menu -->
-      <nav>
+      <nav class="nav">
         <!-- Logo -->
-        <a href="./index.html">
+        <a href="./index.html" class="link nav-logo">
           Web
-          <span>Studio</span></a
+          <span class="nav-logo-item">Studio</span></a
         >
-        <ul>
+        <ul class="list">
           <li>
-            <a href="./index.html">Studio</a>
+            <a href="./index.html" class="link">Studio</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio</a>
+            <a href="./portfolio.html" class="link">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a href="" class="link">Contacts</a>
           </li>
         </ul>
       </nav>
       <!-- adress -->
-      <address>
-        <ul>
+      <address class="address">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="address-item link">info@devstudio.com</a>
           </li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111" class="address-item link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -73,7 +73,6 @@
           <button type="button">Marketing</button>
         </li>
       </ul>
-      <img src="./images/portfolio/group.jpg" alt="Mouse pointer" width="13" />
 
       <!-- row 1 section-->
       <section>
@@ -164,10 +163,13 @@
     </main>
 
     <!-- footer -->
-    <footer>
+    <footer class="footer">
       <!-- logo -->
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="link footer-logo">
+        Web
+        <span class="footer-logo-item">Studio</span></a
+      >
+      <p class="text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
