small fix index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Hero section -->
       <section class="hero">
         <!-- head -->
-        <h1 class="head">Effective Solutions for Your Business</h1>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <!-- button -->
         <button type="button" class="btn">Order Service</button>
       </section>
