add css styles for portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,112 +51,130 @@
         </ul>
       </address>
     </header>
+
     <!--main content  -->
+
     <main>
-      <!-- head -->
-      <h1 hidden>Portfolio</h1>
-      <!-- filter -->
-      <ul>
-        <li>
-          <button type="button">All</button>
-        </li>
-        <li>
-          <button type="button">Web Site</button>
-        </li>
-        <li>
-          <button type="button">App</button>
-        </li>
-        <li>
-          <button type="button">Design</button>
-        </li>
-        <li>
-          <button type="button">Marketing</button>
-        </li>
-      </ul>
-
-      <!-- row 1 section-->
       <section>
-        <ul>
+        <!-- head -->
+
+        <h1 hidden>Portfolio</h1>
+
+        <!-- filter -->
+
+        <ul class="list">
           <li>
-            <img
-              src="./images/portfolio/row1/banking-app.jpg"
-              alt="Banking App Interface Concept"
-              width="369"
-            />
-            <h3>Banking App Interface Concept</h3>
-            <p>App</p>
+            <button type="button" class="portfolio-btn">All</button>
           </li>
           <li>
-            <img
-              src="./images/portfolio/row1/cashles-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <button type="button" class="portfolio-btn">Web Site</button>
           </li>
           <li>
-            <img
-              src="./images/portfolio/row1/meditacion-app.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <button type="button" class="portfolio-btn">App</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-btn">Design</button>
+          </li>
+          <li>
+            <button type="button" class="portfolio-btn">Marketing</button>
           </li>
         </ul>
-      </section>
 
-      <!-- row2 section -->
-      <section>
-        <ul>
-          <li>
-            <img src="./images/portfolio/row2/taxi-service.jpg" alt="Taxi Service" width="360" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/row2/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
-          </li>
-          <li>
-            <img
-              src="./images/portfolio/row2/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
-          </li>
-        </ul>
-      </section>
+        <!-- product -->
 
-      <!-- row3 section -->
-      <section>
-        <ul>
+        <ul class="list">
           <li>
-            <img
-              src="./images/portfolio/row3/instagram.jpg"
-              alt="Instagram Stories Concept"
-              width="360"
-            />
-            <h3>Instagram Stories Concept</h3>
-            <p>Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/row1/banking-app.jpg"
+                alt="Banking App Interface Concept"
+                width="369"
+              />
+            </a>
+
+            <h2 class="portfolio-title">Banking App Interface Concept</h2>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
-            <img src="./images/portfolio/row3/organic-food.jpg" alt="Organic Food" width="360" />
-            <h3>Organic Food</h3>
-            <p>Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/row1/cashles-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+            </a>
+
+            <h2 class="portfolio-title">Cashless Payment</h2>
+            <p class="portfolio-text">Marketing</p>
           </li>
           <li>
-            <img src="./images/portfolio/row3/fresh-coffee.jpg" alt="Fresh Coffee" width="360" />
-            <h3>Fresh Coffee</h3>
-            <p>Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/row1/meditacion-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+            </a>
+
+            <h2 class="portfolio-title">Meditation App</h2>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img src="./images/portfolio/row2/taxi-service.jpg" alt="Taxi Service" width="360" />
+            </a>
+            <h2 class="portfolio-title">Taxi Service</h2>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/row2/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+            </a>
+
+            <h2 class="portfolio-title">Screen Illustrations</h2>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/row2/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+            </a>
+
+            <h2 class="portfolio-title">Online Courses</h2>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/row3/instagram.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+            </a>
+
+            <h2 class="portfolio-title">Instagram Stories Concept</h2>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img src="./images/portfolio/row3/organic-food.jpg" alt="Organic Food" width="360" />
+            </a>
+            <h2 class="portfolio-title">Organic Food</h2>
+            <p class="portfolio-text">Web Site</p>
+          </li>
+          <li>
+            <a href="" class="link">
+              <img src="./images/portfolio/row3/fresh-coffee.jpg" alt="Fresh Coffee" width="360" />
+            </a>
+            <h2 class="portfolio-title">Fresh Coffee</h2>
+            <p class="portfolio-text">Web Site</p>
           </li>
         </ul>
       </section>
